fix icons being inivisble on mobile

--- a/html/assets/css/page/indexPage.css
+++ b/html/assets/css/page/indexPage.css
@@ -195,8 +195,20 @@ form {
         left: 10px !important;
     }
 
+    .btn-container {
+        display: block !important;
+    }
+
     .infoBtn, .notificationBtn {
         display: unset !important;
+    }
+
+    .infoBtn {
+        right: 50px;
+    }
+
+    .notificationBtn {
+        right: 15px;
     }
 
     .input-field.third-wrap:not(.rad) {
